Pulled changes from java-buildpack master to support offline build and other changes